Scrollbar no longer affects width of certain components.

--- a/front-end-app/src/global.css
+++ b/front-end-app/src/global.css
@@ -2,6 +2,8 @@ body,
 html {
   margin: 0;
   padding: 0;
+
+  scrollbar-gutter: stable; /* Adds permanent scrollbar space for classic scrollbars  */
 }
 
 .loadMoreButton-container {
